[gd_scene load_steps=5 format=2]

[ext_resource path="res://ChatBox.gd" type="Script" id=1]
[ext_resource path="res://Assets/Images/Misc/menu options.png" type="Texture" id=2]
[ext_resource path="res://Assets/Themes/ChatBox.tres" type="Theme" id=3]

[sub_resource type="Theme" id=1]

[node name="ChatBox" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -813.0
margin_bottom = -456.0
script = ExtResource( 1 )

[node name="ColorRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 44.0
margin_bottom = 41.0
theme = SubResource( 1 )
texture = ExtResource( 2 )
expand = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 13.0
margin_right = 30.0
margin_bottom = 30.0

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer"]
margin_right = 225.0
margin_bottom = 124.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 3 )
bbcode_enabled = true
scroll_following = true

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 128.0
margin_right = 225.0
margin_bottom = 161.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
visible = false
margin_right = 66.0
margin_bottom = 23.0
theme = ExtResource( 3 )
text = "[WORLD]"

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
margin_right = 225.0
margin_bottom = 33.0
hint_tooltip = "Send message"
size_flags_horizontal = 3
theme = ExtResource( 3 )
placeholder_text = "Press ESC to exit chat mode"

[connection signal="focus_entered" from="VBoxContainer/HBoxContainer/LineEdit" to="." method="_on_LineEdit_focus_entered"]
[connection signal="focus_exited" from="VBoxContainer/HBoxContainer/LineEdit" to="." method="_on_LineEdit_focus_exited"]
