[gd_scene load_steps=5 format=2]

[ext_resource path="res://World/Player/ChatBox.gd" type="Script" id=1]
[ext_resource path="res://Assets/Images/Misc/left arrow.png" type="Texture" id=2]
[ext_resource path="res://Assets/Themes/ChatBox.tres" type="Theme" id=3]

[sub_resource type="Theme" id=1]

[node name="ChatBox" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 33.0
margin_right = -798.0
margin_bottom = -412.0
mouse_filter = 2
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = SubResource( 1 )
color = Color( 0.027451, 0.0901961, 0.192157, 0.529412 )

[node name="ColorRect2" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -118.0
margin_top = 117.0
margin_right = -118.0
margin_bottom = 117.0
mouse_filter = 2
theme = SubResource( 1 )
color = Color( 0.0117647, 0, 1, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_right = -2.0
margin_bottom = -2.0
mouse_filter = 2

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer"]
margin_right = 222.0
margin_bottom = 113.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 3 )
bbcode_enabled = true
scroll_following = true

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 117.0
margin_right = 222.0
margin_bottom = 153.0
mouse_filter = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
visible = false
margin_top = 5.0
margin_right = 66.0
margin_bottom = 28.0
theme = ExtResource( 3 )
text = "[WORLD]"

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
margin_right = 222.0
margin_bottom = 36.0
size_flags_horizontal = 3
theme = ExtResource( 3 )
placeholder_text = "Press ESC to exit chat mode"

[node name="TextureButton" type="TextureButton" parent="."]
margin_top = -33.0
margin_right = 33.0
size_flags_vertical = 3
texture_normal = ExtResource( 2 )
expand = true

[connection signal="focus_entered" from="VBoxContainer/HBoxContainer/LineEdit" to="." method="_on_LineEdit_focus_entered"]
[connection signal="focus_exited" from="VBoxContainer/HBoxContainer/LineEdit" to="." method="_on_LineEdit_focus_exited"]
[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
